--- a/deploy.yml
+++ b/deploy.yml
@@ -10,7 +10,7 @@ services:
      - "my_root_password=" # root password for ssh connection. пароль root для подключения по ssh. 
      - "MONIKER=" # node name (If it is not difficult, specify Akash in the node name, for example: DimokusAkash). имя ноды (Если нетрудно, укажите в имени ноды Akash, например: DimokusAkash)
      - "MNEMONIC=" # seed phrase from the Clan wallet. seed фраза от кошелька Clan.
-     - "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
+     #- "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
     
      
     expose:
