--- a/deploy.yml
+++ b/deploy.yml
@@ -11,11 +11,11 @@ services:
      - "MONIKER=" # node name (If it is not difficult, specify Akash in the node name, for example: DimokusAkash). имя ноды (Если нетрудно, укажите в имени ноды Akash, например: DimokusAkash)
      - "MNEMONIC=" # seed phrase from the Clan wallet. seed фраза от кошелька Clan.
      - "LINK_KEY=" # link to the posted pirv-validator_key.json (direct download). It will also work from other Cosmos-based testnets. ссылка на размещенный pirv-validator_key.json (прямое скачивание). Подойдет и от других тестнетов на базе Cosmos.
-     - "SNAP_RPC="
-     - "vers="
-     - "genesis="
-     - "addrbook="
-     - "PEER="
+     - "SNAP_RPC=http://65.108.103.236:30657"
+     - "vers=v1.0.4-alpha"
+     - "genesis=https://raw.githubusercontent.com/ClanNetwork/testnets/main/playstation-2/genesis.json"
+     - "addrbook=https://raw.githubusercontent.com/Dimokus88/clan/main/addrbook.json"
+     - "PEER=0ed34a15a0528bc4d1388b73a792d39858cb1032@65.108.103.236:30656,0cb936b2e3256c8d9d90362f2695688b9d3a1b9e@34.73.151.40:26656,e85dc5ec5b77e86265b5b731d4c555ef2430472a@23.88.43.130:26656,9d7ec4cb534717bfa51cdb1136875d17d10f93c3@116.203.60.243:26656,3049356ee6e6d7b2fa5eef03555a620f6ff7591b@65.108.98.218:56656,61db9dede0dff74af9309695b190b556a4266ebf@34.76.96.82:26656,d97c9ac4a8bb0744c7e7c1a17ac77e9c33dc6c34@34.116.229.135:26656"
      
     expose:
       - port: 80
